[project]
name = "cowan-runner"
version = "0.1.0"
description = "Automation tool for running Cowan atomic structure calculations and parsing OUT36."
authors = [{name = "Miguel Carvalho"}]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
cowan-runner = "cowan_runner.cli:create_cowan_run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
